Complete Render Layer Overhaul
Completely overhauled the render layer system. It now does everything from within the script, with no external shader or json files necessary. Avatars using the old render layer system will need to be changed.